Fixed anchor hover bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,10 @@ footer img {
 }
 
 @media screen and (max-width: 768px) {
+  a:hover::after {
+    all: unset;
+  }
+
   footer {
     display: flex;
     flex-direction: column;
